Fix checkbox visibility on iPhone x

--- a/src/app/components/movies/movies.component.sass
+++ b/src/app/components/movies/movies.component.sass
@@ -30,6 +30,7 @@ $medium-margin:  1.6em
             input
                 position: absolute
                 top: -20px
+                opacity: 0
                 &:hover + span
                     background-color: white
                     cursor: pointer
